[project]
name = "koyu-cli"
version = "0.1.0"
description = "koyu CLI — fetch public templates, pull manifest datasets, push results. No workspace semantics."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "blake3>=1.0",
]

[project.scripts]
koyu = "koyu_cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["koyu_cli*"]
