[project]
name = "koyu-cli"
version = "0.1.0"
description = "The koyu command line: move robot-learning data and templates between koyu.dev and any machine. Umbrella for all koyu verbs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "blake3>=1.0",
]

[project.urls]
Homepage = "https://koyu.dev"
Documentation = "https://koyu.dev/docs"
Repository = "https://github.com/vdesai2014/koyu-cli"

[project.scripts]
koyu = "koyu_cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["koyu_cli*"]
